<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".roomdb.feature.UpdateTaskActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/update_user_details"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

            <EditText
                android:id="@+id/editTextTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name" />

            <EditText
                android:id="@+id/editTextDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/phone" />

            <EditText
                android:id="@+id/editTextFinishBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email" />


            <Button
                android:id="@+id/button_update"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/app_bg"
                android:text="@string/update"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />


            <Button
                android:id="@+id/button_delete"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="15dp"
                android:background="@color/app_bg"
                android:text="@string/delete"
                android:textAllCaps="false"
                android:textColor="@android:color/white" />


        </LinearLayout>


    </RelativeLayout>
</layout>