<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".roomdb.feature.AddUserRoomActivity">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:orientation="vertical"
            android:padding="16dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="15dp"
                android:text="@string/add_user_details"
                android:textAlignment="center"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Headline" />

            <EditText
                android:id="@+id/editTextTask"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_name" />

            <EditText
                android:inputType="textEmailAddress"
                android:id="@+id/editTextDesc"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_email" />

            <EditText
                android:inputType="phone"
                android:id="@+id/editTextFinishBy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/user_phone" />

            <Button
                android:id="@+id/button_save"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:backgroundTint="@color/app_bg"
                android:text="@string/save"
                android:textSize="@dimen/_20sdp"
                android:textAllCaps="false"
                android:textColor="#455A64" />

        </LinearLayout>

    </RelativeLayout>
</layout>