<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    >

    <RelativeLayout
        android:id="@+id/rlMainHeader"
        android:background="@color/app_bg"
        android:layout_width="match_parent"
        android:layout_height="40dp">

        <ImageView
            android:id="@+id/imgBackAUD"
            android:layout_marginStart="10dp"
            android:layout_centerVertical="true"
            android:layout_width="18dp"
            android:layout_height="25dp"/>

        <TextView
            android:textSize="16sp"
            android:layout_centerInParent="true"
            android:textColor="@android:color/white"
            android:text="@string/user_details"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </RelativeLayout>


    <LinearLayout
        android:layout_below="@+id/rlMainHeader"
        android:padding="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNameAUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:hint="@string/name"
            android:text=""
            android:textColor="@color/app_bg"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvEmailAUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/email"
            android:text=""
            android:textColor="@color/app_bg"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvPhoneAUD"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:hint="@string/phone"
            android:text=""
            android:textColor="@color/app_bg"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>