<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="15dp"
    android:elevation="8dp"
    android:layout_marginRight="5dp"
    android:layout_marginLeft="5dp"
    android:layout_marginTop="5dp"
    android:id="@+id/llUserDetails"
    android:background="@color/gray_bold"
    android:layout_height="wrap_content">

    <ImageView
        android:visibility="gone"
        android:id="@+id/imgEdit"
        android:layout_gravity="end"
        android:background="@drawable/ic_draft"
        android:layout_width="35dp"
        android:layout_height="35dp"/>

    <TextView
        android:hint="@string/name"
        android:text=""
        android:textSize="20sp"
        android:id="@+id/tvName"
        android:textColor="@color/app_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginTop="10dp"
        android:hint="@string/email"
        android:text=""
        android:textSize="20sp"
        android:textColor="@color/app_bg"
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>
    <TextView
        android:layout_marginTop="10dp"
        android:hint="@string/phone"
        android:text=""
        android:textSize="20sp"
        android:id="@+id/tvPhone"
        android:textColor="@color/app_bg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>


</LinearLayout>